// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`BulletBars renders with defaultProps 1`] = `
<div
  className="ax-bullet-chart__block"
>
  <div
    className="ax-bullet-chart__bars"
    style={
      Object {
        "height": "49.504950495049506%",
      }
    }
  >
    <div
      className="ax-bullet-chart__bars-bar"
    >
      <div
        className="ax-bars ax-bars--up"
      >
        <div
          className="ax-bars__bars-container"
        >
          <div
            className="ax-bars__bars"
          >
            <div
              className="ax-bars__bar"
              onClick={undefined}
              style={
                Object {
                  "height": "20%",
                  "width": false,
                }
              }
            >
              <div
                className="ax-bars__bar-rect ax-bars__bar-rect--blue"
                style={
                  Object {
                    "height": false,
                    "minHeight": false,
                    "minWidth": "1rem",
                    "width": undefined,
                  }
                }
              />
              <div
                className="ax-bars__bar-label ax-bars__bar-label--hidden"
              >
                <small
                  className="ax-small"
                >
                  undefined%
                </small>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
    <div
      className="ax-bullet-chart__bars-bar"
    >
      <div
        className="ax-bars ax-bars--up"
      >
        <div
          className="ax-bars__bars-container"
        >
          <div
            className="ax-bars__bars"
          >
            <div
              className="ax-bars__bar"
              onClick={undefined}
              style={
                Object {
                  "height": "100%",
                  "width": false,
                }
              }
            >
              <div
                className="ax-bars__bar-rect ax-bars__bar-rect--pink"
                style={
                  Object {
                    "height": false,
                    "minHeight": false,
                    "minWidth": "1rem",
                    "width": undefined,
                  }
                }
              />
              <div
                className="ax-bars__bar-label ax-bars__bar-label--hidden"
              >
                <small
                  className="ax-small"
                >
                  undefined%
                </small>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`BulletBars renders with the right height 100 1`] = `
<div
  className="ax-bullet-chart__block"
>
  <div
    className="ax-bullet-chart__bars"
    style={
      Object {
        "height": "100%",
      }
    }
  >
    <div
      className="ax-bullet-chart__bars-bar"
    >
      <div
        className="ax-bars ax-bars--up"
      >
        <div
          className="ax-bars__bars-container"
        >
          <div
            className="ax-bars__bars"
          >
            <div
              className="ax-bars__bar"
              onClick={undefined}
              style={
                Object {
                  "height": "20%",
                  "width": false,
                }
              }
            >
              <div
                className="ax-bars__bar-rect ax-bars__bar-rect--blue"
                style={
                  Object {
                    "height": false,
                    "minHeight": false,
                    "minWidth": "1rem",
                    "width": undefined,
                  }
                }
              />
              <div
                className="ax-bars__bar-label ax-bars__bar-label--hidden"
              >
                <small
                  className="ax-small"
                >
                  undefined%
                </small>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
    <div
      className="ax-bullet-chart__bars-bar"
    >
      <div
        className="ax-bars ax-bars--up"
      >
        <div
          className="ax-bars__bars-container"
        >
          <div
            className="ax-bars__bars"
          >
            <div
              className="ax-bars__bar"
              onClick={undefined}
              style={
                Object {
                  "height": "100%",
                  "width": false,
                }
              }
            >
              <div
                className="ax-bars__bar-rect ax-bars__bar-rect--pink"
                style={
                  Object {
                    "height": false,
                    "minHeight": false,
                    "minWidth": "1rem",
                    "width": undefined,
                  }
                }
              />
              <div
                className="ax-bars__bar-label ax-bars__bar-label--hidden"
              >
                <small
                  className="ax-small"
                >
                  undefined%
                </small>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`BulletBars renders with the right height 300 1`] = `
<div
  className="ax-bullet-chart__block"
>
  <div
    className="ax-bullet-chart__bars"
    style={
      Object {
        "height": "33.33333333333333%",
      }
    }
  >
    <div
      className="ax-bullet-chart__bars-bar"
    >
      <div
        className="ax-bars ax-bars--up"
      >
        <div
          className="ax-bars__bars-container"
        >
          <div
            className="ax-bars__bars"
          >
            <div
              className="ax-bars__bar"
              onClick={undefined}
              style={
                Object {
                  "height": "20%",
                  "width": false,
                }
              }
            >
              <div
                className="ax-bars__bar-rect ax-bars__bar-rect--blue"
                style={
                  Object {
                    "height": false,
                    "minHeight": false,
                    "minWidth": "1rem",
                    "width": undefined,
                  }
                }
              />
              <div
                className="ax-bars__bar-label ax-bars__bar-label--hidden"
              >
                <small
                  className="ax-small"
                >
                  undefined%
                </small>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
    <div
      className="ax-bullet-chart__bars-bar"
    >
      <div
        className="ax-bars ax-bars--up"
      >
        <div
          className="ax-bars__bars-container"
        >
          <div
            className="ax-bars__bars"
          >
            <div
              className="ax-bars__bar"
              onClick={undefined}
              style={
                Object {
                  "height": "100%",
                  "width": false,
                }
              }
            >
              <div
                className="ax-bars__bar-rect ax-bars__bar-rect--pink"
                style={
                  Object {
                    "height": false,
                    "minHeight": false,
                    "minWidth": "1rem",
                    "width": undefined,
                  }
                }
              />
              <div
                className="ax-bars__bar-label ax-bars__bar-label--hidden"
              >
                <small
                  className="ax-small"
                >
                  undefined%
                </small>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;
